set(PRJ Inference)
file(GLOB_RECURSE srcs CONFIGURE_DEPENDS "src/*.cpp" "include/*.h")
add_library(${PRJ} ${srcs})
set_target_properties(${PRJ} PROPERTIES LINKER_LANGUAGE CXX)
target_include_directories(${PRJ} PUBLIC include)

if(USE_PARALLEL)
    target_link_libraries(${PRJ} PUBLIC onnxruntime::onnxruntime OpenMP::OpenMP_CXX MolHandler)
else()
    target_link_libraries(${PRJ} PUBLIC onnxruntime::onnxruntime MolHandler)
endif()
